MMRDS-1350 Fix issue where locked message was displaying even though you were the user. Fix issue where datetime info was wrapping and looking weird.

--- a/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
+++ b/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
@@ -1341,6 +1341,11 @@ button.link {
 .construct__info {
   font-size: 14px;
 }
+.construct__info span {
+  padding-left: 5px;
+  position: absolute;
+  width: 100%;
+}
 
 /*
     Form styles for anything inside of data-collector output
